--- a/config.yaml
+++ b/config.yaml
@@ -22,10 +22,11 @@ label_flipping_parameters:
 
 model_args:
   model: "lenet"
-  epochs: 10
+  epochs: 1
   batch_size: 64
   learning_rate: 0.001
   device: 'gpu'  
+  loss_function: cross_entropy
 
 train_args:
   federated_algorithm: "FedAvg"
