added foolsgold, norm_diff_clipping_defense; testing not done

--- a/config.yaml
+++ b/config.yaml
@@ -30,10 +30,15 @@ model_args:
 train_args:
   federated_algorithm: "fedavg"
   num_malicious_devices: 0.2
-  client_num_in_total: 100
-  comm_round: 30
+  client_num_in_total: 10
+  comm_round: 2
   device: 'gpu'
   gpu_id: 1
 
 phase:
-  phase: 3
+  phase: 1
+
+defense_args:
+  enable_defense: True
+  defense_type: norm_diff_clipping_defense
+  norm_bound: 0.33
